welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: not found: value recul
  recul()
  ^