welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var couleurSol=false
  if (estFaceMur()){
    return false
  }
  if (  getCouleurSol()==Color.green){
    couleurSol=true
    avance()
  }
  recul()
  if (couleurSol==true){
    return true
  }
  else {
    return false
  }  
  
  
}
